new endpoint delete turno
