# routes/api.php
@@ -56,6 +56,7 @@ Route::prefix('turno')->group(function () {
     Route::get('/{turnoId}', 'TurnoController@getTurnoById')->name('getTurnoById');
     Route::get('/datePaciente/{idPaciente}', 'TurnoController@getTurnoByPacienteId')->name('getTurnoByPaciente');
     Route::post('/createTurno', 'TurnoController@createTurno')->name('createTurno');
+    Route::delete('/deleteTurno/{turnoId}', 'TurnoController@deleteTurno')->name('deleteTurno');
 });
 
 Route::prefix('horario')->group(function () {
